<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>onlexnet.sinnet</groupId>
  <artifactId>uservice-timeentries-base</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <properties>
    <spring-boot.version>3.5.5</spring-boot.version>
    <api.version>0.1.3</api.version>
    <dapr.version>1.7.0</dapr.version>
    <guava.version>32.0.0-jre</guava.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <instancio-junit5.version>5.4.0</instancio-junit5.version>
    <org.mapstruct.version>1.6.3</org.mapstruct.version>
    <sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
    <testcontainers.version>1.20.5</testcontainers.version>
    <commons-io.version>2.20.0</commons-io.version>
    <testcontainers.version>1.20.5</testcontainers.version>

    <aggregate.report.dir>report-aggregate/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
  </properties>

  <dependencies>

    <dependency>
        <groupId>org.jspecify</groupId>
        <artifactId>jspecify</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.26</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>onlexnet.sinnet</groupId>
        <artifactId>uservice-timeentries.rpc</artifactId>
        <version>${api.version}</version>
      </dependency>
      <dependency>
        <groupId>onlexnet.sinnet</groupId>
        <artifactId>uservice-projects.rpc</artifactId>
        <version>${api.version}</version>
      </dependency>
      <dependency>
        <groupId>onlexnet.sinnet</groupId>
        <artifactId>uservice-projects.events</artifactId>
        <version>${api.version}</version>
      </dependency>
      <dependency>
        <groupId>onlexnet.sinnet</groupId>
        <artifactId>uservice-reports.rpc</artifactId>
        <version>${api.version}</version>
      </dependency>
      <dependency>
        <groupId>io.dapr</groupId>
        <artifactId>dapr-sdk</artifactId>
        <version>${dapr.version}</version>
      </dependency>

      <dependency>
        <groupId>onlexnet.sinnet</groupId>
        <artifactId>uservice-timeentries-host</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>onlexnet.sinnet</groupId>
        <artifactId>uservice-timeentries-initdb</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>onlexnet.sinnet</groupId>
        <artifactId>uservice-timeentries-initdb-test</artifactId>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>onlexnet.sinnet</groupId>
        <artifactId>uservice-timeentries-initdb-migrate</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
          <groupId>org.jspecify</groupId>
          <artifactId>jspecify</artifactId>
          <version>1.0.0</version>
      </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
        <exclusions>
          <exclusion>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
  
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers-bom</artifactId>
        <version>${testcontainers.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>com.maciejwalkowiak.spring</groupId>
        <artifactId>spring-boot-startup-report</artifactId>
        <version>0.2.0</version>
        <optional>true</optional>
      </dependency>

      <dependency>
        <groupId>org.jmolecules</groupId>
        <artifactId>jmolecules-bom</artifactId>
        <version>2021.0.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>io.vavr</groupId>
        <artifactId>vavr</artifactId>
        <version>0.10.4</version>
      </dependency>

      <dependency>
        <groupId>org.instancio</groupId>
        <artifactId>instancio-junit</artifactId>
        <version>${instancio-junit5.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>com.microsoft.sqlserver</groupId>
          <artifactId>mssql-jdbc</artifactId>
          <version>12.2.0.jre11</version>
      </dependency>

      <dependency>
          <groupId>org.mapstruct</groupId>
          <artifactId>mapstruct</artifactId>
          <version>${org.mapstruct.version}</version>
      </dependency>

    </dependencies>

  </dependencyManagement>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <configLocation>build-checkstyle/google_checks_customized.xml</configLocation>
          <violationSeverity>warning</violationSeverity>
          <failOnViolation>true</failOnViolation>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>10.16.0</version>
          </dependency>
          <dependency>
            <groupId>onlexnet.sinnet</groupId>
            <artifactId>build-tools</artifactId>
            <version>${revision}</version>
          </dependency>
        </dependencies>
      </plugin>
      
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.4.1</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- 
        Without the plugin spring-boot:run is not able to compile dependencies
        https://github.com/spring-projects/spring-boot/issues/3436#issuecomment-236213126
      -->
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot.version}</version>
        <configuration>
          <skip>true</skip>
          <enabled>true</enabled>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>21</release>
          <fork>true</fork>
          <compilerArgs>
            <arg>-parameters</arg>
            <arg>-XDcompilePolicy=simple</arg>
            <arg>-Xplugin:ErrorProne -XepDisableAllChecks -XepOpt:NullAway:OnlyNullMarked=true -Xep:NullAway:ERROR</arg>
            <!-- <arg>-Xplugin:ErrorProne -XepDisableAllChecks -XepOpt:NullAway:OnlyNullMarked=true -XepOpt:NullAway:ERROR</arg> -->
            <!-- <arg>-Xplugin:ErrorProne -XepDisableAllChecks -XepOpt:NullAway:OnlyNullMarked=true -Xep:NullAway:ERROR -XepOpt:NullAway:JSpecifyMode=true</arg> -->
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
              <version>${spring-boot.version}</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.30</version>
            </path>
            <path>
              <groupId>de.firehead</groupId>
              <artifactId>mapstruct-spi-protobuf</artifactId>
              <version>1.1.0</version>
            </path>
            <path>
              <groupId>com.google.errorprone</groupId>
              <artifactId>error_prone_core</artifactId>
              <version>2.24.1</version>
            </path>
            <path>
              <groupId>com.uber.nullaway</groupId>
              <artifactId>nullaway</artifactId>
              <version>0.12.10</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>

    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.sonarsource.scanner.maven</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>${sonar-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco-maven-plugin.version}</version>
        </plugin>

        <!--
          Checking for Violations as Part of the Build
          https://maven.apache.org/plugins/maven-checkstyle-plugin/usage.html
        -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.3.1</version>

          <!--
          https://maven.apache.org/plugins/maven-checkstyle-plugin/examples/upgrading-checkstyle.html -->
          <dependencies>
            <dependency>
              <groupId>com.puppycrawl.tools</groupId>
              <artifactId>checkstyle</artifactId>
              <version>10.16.0</version>
            </dependency>
          </dependencies>

          <configuration>
            <!--
            Configuration elements: https://maven.apache.org/plugins/maven-checkstyle-plugin/check-mojo.html#inputEncoding
            -->
            <configLocation>../.checkstyle/checkstyle.xml</configLocation>
            <inputEncoding>UTF-8</inputEncoding>
            <consoleOutput>true</consoleOutput>
            <failsOnError>true</failsOnError>
            <excludes>**/gen/**/*</excludes>
          </configuration>
          <executions>
            <execution>
              <id>validate</id>
              <phase>validate</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>coverage</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>

          <plugin>
            <groupId>org.sonarsource.scanner.maven</groupId>
            <artifactId>sonar-maven-plugin</artifactId>
          </plugin>

          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
